# algorithms-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: merge-sort.md  pearson-correlation.md  template.md
src/declarative/: recursion.py
src/searching/: binary_search.py
src/sorting/: insertion_sort.py  merge_sort.py
src/sorting/merge_sort/: __init__.py  merge_sort.py  segregate_p_n_numbers.py
src/utils/: __init__.py  debug_utils.py
tests/declarative/: test_recursion.py
tests/searching/: test_binary_search.py
tests/sorting/: test_insertion_sort.py  test_merge_sort.py  test_segregate_p_n_numbers.py
